part4/4.07/manifests/logoutput-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise-namespace
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - name: port-8000
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: port-8001
      port: 8001
      protocol: TCP
      targetPort: 8001
